Bug 1768961 - Avoid logging from pingsender. r=nrishel

The main reason to do this is to avoid polluting developer's terminals
_after_ Firefox exits; regular users shouldn't see `pingsender`
logging at all.

It's not technically difficult to actually launch with null stdout and
stderr, but it is quite onerous: we have at least two ways to launch
processes (`LaunchApp` and `nsIProcess`), with platform specific
differences and implementation specific options.  This approach is at
least brief and easy to understand.

Differential Revision: https://phabricator.services.mozilla.com/D163153